--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>org.example</groupId>
     <artifactId>Java_3</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>antlr</groupId>
+            <artifactId>antlr</artifactId>
+            <version>2.7.2</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
